--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .profile__avatar {
   display: flex;
   gap: 30px;
@@ -21,25 +22,35 @@
 }
 
 .profile__change-hide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: none;
+  align-items: center;
+  justify-content: center;
 }
+
 .profile__change-button {
   background-color: transparent;
   border: none;
-  position: absolute;
-  left: 23%;
-  bottom: 48%;
+  display: block;
+  position: relative;
+  right: 36%;
 }
+
 .profile__change-button-icon {
   width: 26px;
   height: 26px;
 }
 
-.profile__image:hover {
-  opacity: 0.2;
+.profile__avatar:hover .profile__change-hide {
+  display: flex;
 }
-.profile__image:hover .profile__change-hide {
-  display: block;
+
+.profile__avatar:hover .profile__image {
+  opacity: 0.2;
 }
 
 .profile__info {
@@ -48,15 +59,16 @@
   flex-wrap: wrap;
   gap: 16px;
   margin: 22px 0 21px;
-
   max-width: 415px;
 }
+
 .profile__name {
   display: flex;
   flex-direction: row;
   gap: 18px;
   margin: 0;
 }
+
 .profile__name-info {
   font-size: 42px;
   line-height: 48px;
@@ -67,6 +79,7 @@
   max-width: 373px;
   margin: 0;
 }
+
 .profile__name-button {
   background-image: url(../images/edit.svg);
   background-color: transparent;
@@ -79,6 +92,7 @@
   max-height: 24px;
   width: 24px;
 }
+
 .profile__name-button:hover {
   opacity: 60%;
   cursor: pointer;
@@ -91,6 +105,7 @@
   overflow: hidden;
   max-width: 100%;
 }
+
 .profile__button-add {
   background-image: url(../images/add.svg);
   background-position: center;
@@ -104,6 +119,7 @@
   margin-bottom: 35px;
   background-color: transparent;
 }
+
 .profile__button-add:hover {
   opacity: 60%;
   cursor: pointer;
@@ -124,6 +140,7 @@
     background-size: 9.25px;
   }
 }
+
 @media screen and (max-width: 600px) {
   .profile {
     margin-bottom: 36px;
@@ -165,7 +182,6 @@
     height: 18px;
     background-size: 7.5px;
   }
-
   .profile__button-add {
     width: 282px;
     height: 50px;
