--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -21,23 +21,19 @@
   transition: 0.6s ease-in-out;
 }
 
-.profile__change-hide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-
 .profile__change-button {
   background-color: transparent;
   border: none;
   display: block;
-  position: relative;
-  right: 36%;
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+.profile__avatar:hover .profile__change-button {
+  opacity: 1;
 }
 
 .profile__change-button-icon {
@@ -45,11 +41,7 @@
   height: 26px;
 }
 
-.profile__avatar:hover .profile__change-hide {
-  display: flex;
-}
-
-.profile__avatar:hover .profile__image {
+.profile__image:hover {
   opacity: 0.2;
 }
 
