--- a/src/blocks/auth.css
+++ b/src/blocks/auth.css
@@ -3,9 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 358px;
+  width: 358px;
   margin: 0 auto;
-  height: calc(100vh - 300px);
+  /* height: calc(100vh - 300px); */
+  height: 75vh;
   padding-top: 20px;
 }
 
