--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -85,6 +85,26 @@
   cursor: pointer;
 }
 
+.popup__tooltip__image {
+  width: 100%;
+  max-height: 120px;
+  margin: 0 auto;
+}
+
+.popup__tooltip__text {
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 30px;
+  padding: 0;
+  margin: 35px auto;
+  text-align: center;
+  width: 358px;
+  max-width: 100%;
+  color: #000000; /* Set a solid color for the text */
+  background-color: #ffffff; /* Set a solid background color */
+  opacity: 1;
+}
+
 @media screen and (max-width: 600px) {
   .popup__content {
     width: 282px;
